Version 1.5.1-0
- depdendency updates
- included sources in binary jar, it's no longer necessary to add source
jar to gwt projects
- updated to apache-commons-validator 1.5.1:
  New features:
  o VALIDATOR-351:  DomainValidator - allow access to internal arrays

  Fixed Bugs:
  o VALIDATOR-392:  Mastercard Series 2 BIN ranges (active from October
2016) added to CreditCardValidator
                    To disable the new ranges, use option
MASTERCARD_PRE_OCT2016 or validator MASTERCARD_VALIDATOR_PRE_OCT2016
Thanks to Tim Deboer.
  o VALIDATOR-386:
org.apache.commons.validator.routines.DomainValidator.ArrayType is not
public Thanks to Auke van Leeuwen.
  o VALIDATOR-359:  EmailValidator does not catch invalid email address
like dora@.com Thanks to Dora Kinghorn.
  o VALIDATOR-384:  EmailValidator does not support escaped quotes in a
quoted string Thanks to Kris Babic.

  Changes:
  o                 Updated to TLD list Version 2016041301, Last Updated
Thu Apr 14 07:07:01 2016 UTC