@@ -32,7 +32,7 @@ import com.google.gwt.core.shared.GwtIncompatible;
  * This class contains basic methods for performing validations that return the
  * correctly typed class based on the validation performed.
  *
- * @version $Revision: 1649191 $
+ * @version $Revision: 1716212 $
  */
 public class GenericTypeValidator implements Serializable {
 
@@ -50,7 +50,7 @@ public class GenericTypeValidator implements Serializable {
         }
 
         try {
-            return new Byte(value);
+            return Byte.valueOf(value);
         } catch (NumberFormatException e) {
             return null;
         }
@@ -84,7 +84,7 @@ public class GenericTypeValidator implements Serializable {
             if (pos.getErrorIndex() == -1 && pos.getIndex() == value.length() &&
                     num.doubleValue() >= Byte.MIN_VALUE &&
                     num.doubleValue() <= Byte.MAX_VALUE) {
-                result = new Byte(num.byteValue());
+                result = Byte.valueOf(num.byteValue());
             }
         }
 
@@ -103,7 +103,7 @@ public class GenericTypeValidator implements Serializable {
         }
 
         try {
-            return new Short(value);
+            return Short.valueOf(value);
         } catch (NumberFormatException e) {
             return null;
         }
@@ -137,7 +137,7 @@ public class GenericTypeValidator implements Serializable {
             if (pos.getErrorIndex() == -1 && pos.getIndex() == value.length() &&
                     num.doubleValue() >= Short.MIN_VALUE &&
                     num.doubleValue() <= Short.MAX_VALUE) {
-                result = new Short(num.shortValue());
+                result = Short.valueOf(num.shortValue());
             }
         }
 
@@ -156,7 +156,7 @@ public class GenericTypeValidator implements Serializable {
         }
 
         try {
-            return new Integer(value);
+            return Integer.valueOf(value);
         } catch (NumberFormatException e) {
             return null;
         }
@@ -190,7 +190,7 @@ public class GenericTypeValidator implements Serializable {
             if (pos.getErrorIndex() == -1 && pos.getIndex() == value.length() &&
                     num.doubleValue() >= Integer.MIN_VALUE &&
                     num.doubleValue() <= Integer.MAX_VALUE) {
-                result = new Integer(num.intValue());
+                result = Integer.valueOf(num.intValue());
             }
         }
 
@@ -209,7 +209,7 @@ public class GenericTypeValidator implements Serializable {
         }
 
         try {
-            return new Long(value);
+            return Long.valueOf(value);
         } catch (NumberFormatException e) {
             return null;
         }
@@ -243,7 +243,7 @@ public class GenericTypeValidator implements Serializable {
             if (pos.getErrorIndex() == -1 && pos.getIndex() == value.length() &&
                     num.doubleValue() >= Long.MIN_VALUE &&
                     num.doubleValue() <= Long.MAX_VALUE) {
-                result = new Long(num.longValue());
+                result = Long.valueOf(num.longValue());
             }
         }
 
@@ -469,7 +469,7 @@ public class GenericTypeValidator implements Serializable {
      * @return the converted Credit Card number.
      */
     public static Long formatCreditCard(String value) {
-        return GenericValidator.isCreditCard(value) ? new Long(value) : null;
+        return GenericValidator.isCreditCard(value) ? Long.valueOf(value) : null;
     }
 
 }
